# algorithms-in-Cpp-EN

./: CMakeLists.txt
ch-1/: quick-find  quick-find.cpp  quick-union  quick-union.cpp  weighted-quick-union  weighted-quick-union-halving-compression  weighted-quick-union-halving-compression.cpp  weighted-quick-union.cpp
ch-2/: ex-2.12-compute-harmonic-numbers.cpp  ex-2.13-compute-lglgN.cpp
ch-3/: Point.h  Triangle.cpp  Triangle.h  ex-3.11-13-sieve-of-Eratosthenes.cpp  ex-3.14-sieve-of-Eratosthenes-vector.cpp  ex-3.17-number-of-before-repeated.cpp  ex-3.18-number-of-before-each-at-least-once.cpp  ex-3.19-20-coin-turns-with-probability.cpp  ex-3.2-random-average-and-std-deviation.cpp  ex-3.3-random-average-and-std-deviation.cpp  ex-3.5-random-bits-fn.cpp  ex-3.9-random-triangles-areas.cpp
