cmake_minimum_required(VERSION 3.9)
project(algorithms-in-Cpp-EN)

set(CMAKE_CXX_STANDARD 11)

# Chapter 1

add_executable(ch1-quick-find
        ch-1/quick-find.cpp)

add_executable(ch1-quick-union
        ch-1/quick-union.cpp)

add_executable(ch1-weighted-quick-union
        ch-1/weighted-quick-union.cpp)

add_executable(ch1-weighted-quick-union-halving-compression
        ch-1/weighted-quick-union-halving-compression.cpp)


# Chapter 2



# Chapter 3
